--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,3 +1,7 @@
-<p>
-  shopping-list works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <app-shopping-edit></app-shopping-edit>
+    <hr>
+    <p>The List</p>
+  </div>
+</div>
